<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="400dp"
        android:background="#A882DD"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <ImageView
            android:id="@+id/plantimage"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            app:srcCompat="@mipmap/images" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/selectedplantidtextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_plant_id"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <TextView
            android:id="@+id/plantnametextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_plant_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <TextView
            android:id="@+id/plantnotestextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_plant_notes"
            android:textAlignment="center"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/waterlogoimageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/screenshot_water" />

            <TextView
                android:id="@+id/plantwateringtextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plant_watering_frequency" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:layout_marginStart="22dp"
        android:text="@string/delete_plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:onClick="removePlant"/>

</androidx.constraintlayout.widget.ConstraintLayout>